k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ${docker_username}/client-service # cat client-depl.yaml | envsubst | k apply -f -
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
