k8s/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: ${docker_username}/user-service  cat users-depl.yaml | envsubst | k apply -f -
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: users
  ports:
    - port: 3001
      targetPort: 3001
